# kg-rainfall-2025

./: .gitignore  README.md  pyproject.toml  submission.csv
notebooks/: EDA.ipynb
rainfall/: constants.py  feat_eng.py  io.py  pipeline.py
