[project]
name = "kg-rainfall-2025"
version = "0.1.0"
description = "Kaggle competition entry"
authors = [
    {name = "Zach Ip",email = "ip.zachary.t@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (<2.0.0)",
    "seaborn (>=0.12.2,<1.0.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "mlxtend (>=0.23.4,<0.24.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "kneed (>=0.8.5,<0.9.0)",
    "imblearn (>=0.0,<0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [{ include = "rainfall" }]